orginized the top navbar for portfolio.html html is nearly ready to copy to other pages, did some slight styling. todo: fix the top nav bar, figue out a solution to collapse it when media is 640px wide, then continue on content for the other pages.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,14 +1,49 @@
 
 body {
-  background: url(../photos/sun-pattern.png)
+  background: url(../photos/sun-pattern.png);
+  /* padding-top: 60px; */
+}
+
+.header {
+  border-bottom: solid;
+  border-color: #cccccc;
+  max-height: 75px;
 }
 
 .contentBox {
   max-width: 960px;
-  background: grey;
+  /* background: grey; */
+  /* padding-top: 60px; */
+}
+
+.nameBox {
+  width: 275px;
+  height: 73px;
+  background-color: #4aaaa5;
+}
+
+h2 {
+  padding: 12px 0 0 12px;
+
+}
+
+.navBox {
+  float: right;
 }
 
 img {
   max-height: 200px;
   max-width: 220px;
+}
+
+.navbar {
+  height: 75px;
+}
+
+/* color of the footer and border below */
+.footCol {
+  background: #666666;
+  border-top: solid;
+  border-width: .5rem;
+  border-color: #4aaaa5;
 }
